// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Menu> Default story renders snapshot 1`] = `
<div
  aria-label="menu-options"
  class="rbt-menu dropdown-menu show"
  id="default-menu"
  role="listbox"
  style="position: relative; display: block; max-height: 300px; overflow: auto;"
>
  <a
    aria-selected="false"
    class="dropdown-item"
    href="#"
    id="-item-0"
    role="option"
  >
    Item 1
  </a>
  <a
    aria-selected="false"
    class="dropdown-item"
    href="#"
    id="-item-1"
    role="option"
  >
    Item 2
  </a>
  <a
    aria-selected="false"
    class="dropdown-item"
    href="#"
    id="-item-2"
    role="option"
  >
    Item 3
  </a>
</div>
`;

exports[`<Menu> Empty story renders snapshot 1`] = `
<div
  aria-label="menu-options"
  class="rbt-menu dropdown-menu show"
  id="empty-menu"
  role="listbox"
  style="position: relative; display: block; max-height: 300px; overflow: auto;"
>
  <a
    class="dropdown-item disabled"
    href="#"
    role="option"
  >
    No matches found.
  </a>
</div>
`;

exports[`<Menu> HeaderAndDivider story renders snapshot 1`] = `
<div
  aria-label="menu-options"
  class="rbt-menu dropdown-menu show"
  id="header-and-divider"
  role="listbox"
  style="position: relative; display: block; max-height: 300px; overflow: auto;"
>
  <div
    class="dropdown-header"
    role="heading"
  >
    This is a menu header
  </div>
  <div
    class="dropdown-divider"
    role="separator"
  />
  <a
    aria-selected="false"
    class="dropdown-item"
    href="#"
    id="-item-0"
    role="option"
  >
    Item 1
  </a>
</div>
`;
